@startuml

skinparam orthogonalLayoutStrategy none
skinparam DefaultFontName Arial
skinparam DefaultFontSize 12
skinparam class {
'    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

skinparam title {
    FontSize 18
'    FontColor #2C3E50
}

skinparam frame {
    BorderColor #black
    FontColor #black
'    BackgroundColor #FAFAFA
}

hide empty members
hide methods
hide circle

title __Modelo de Dominio - EntreNós__
frame "Modelo de Dominio EntreNós" {

class Usuario
class Monedero
class CatalogoUsuario
class Habilidad
class HabilidadOfrecida
class NecesidadRegistrada
class Publicacion
class Transaccion
class Subasta
class Propuesta
class BienOfrecido
class LogroDesbloqueado
class Logro
class PodioSemanal
class Administrador
class Solicitud
class Incidencia

'class Resena
'class Notificacion
'class Cancelacion,

' --- GOBERNANZA Y MODERACIÓN (HU 8) ---
Administrador --|> Usuario : "es un >"
Administrador "1" -- "1..*" Habilidad : "administra >"
Administrador "1" -- "0..*" Incidencia : "resuelve >"

Transaccion "1" -- "0..*" Incidencia : "provoca >"
Incidencia "0..*" -- "1" Usuario : "reporta a >"

'Usuario "1" -up- "0..*" Incidencia : "informa >"
'Incidencia "0..1" -- "1 " Transaccion : "reporta a >"


' --- IDENTIDAD Y CATÁLOGO (HU 1) ---
Usuario "1" *--- "1 " Monedero : "tiene >"
Usuario "1" --- "1" CatalogoUsuario : "crea >"
CatalogoUsuario "1" *-- "0..*" HabilidadOfrecida
CatalogoUsuario "1" *---  "0..*" NecesidadRegistrada
HabilidadOfrecida "0..*" --> "1" Habilidad
NecesidadRegistrada "0..*" --> "1" Habilidad

' --- RELACIONES DE PUBLICACIÓN (HU 2) ---
HabilidadOfrecida "1" --right "1" Publicacion : "genera >"
NecesidadRegistrada "1" --right "1" Publicacion : "genera >"

' --- FLUJO DE SERVICIOS (HU 3) ---
'Usuario "1" -- "0..*" Solicitud : "realiza >"

Usuario -- Publicacion : "examina >"

Solicitud "0..*" --- "1" Publicacion : "genera <"
Solicitud "1" -up- "0..1" Transaccion : "conlleva a >"
Usuario "2" -- "0..*" Transaccion : "participa en >"
Transaccion "1" -up-- "1" HabilidadOfrecida : "califica >"

' --- FLUJO DE SUBASTAS - VARIANTE 3 (HU 4 y HU 5) ---
Usuario "1" -- "0..*" Subasta : "publica >"
Subasta "1" *-- "0..*" Propuesta : "recibe >"
Propuesta "0..*" -- "1" Usuario : "participa con <"
Propuesta "1" *-- "1..*" BienOfrecido : "ofrece >"

' --- GAMIFICACIÓN Y RECONOCIMIENTO (HU 9 y HU 10) ---
Usuario "1" -- "0..*" LogroDesbloqueado : "desbloquea >"
LogroDesbloqueado "0..*" --> "1" Logro : "es un >"
Usuario "0..3" --- "1" PodioSemanal : "es destacado en >"

}

@enduml